src/test/deca/context/invalid/new-wrongClass.context
new-wrongClass.deca:5:
